# stellar-harvest-ie-ml-stellar

./: .env.example  Dockerfile.mlstellar  README.md  publish-module.sh  pyproject.toml  requirements.txt
notebooks/: classification_geomagnetic_storm_intensity.ipynb
src/stellar_harvest_ie_ml_stellar/data/: loader.py
src/stellar_harvest_ie_ml_stellar/features/: build_features.py
src/stellar_harvest_ie_ml_stellar/models/classification/: __init__.py  evaluate.py  features.py  predict.py  train.py  validate.py
src/stellar_harvest_ie_ml_stellar/models/classification/config/: config.yml  core.py
src/stellar_harvest_ie_ml_stellar/models/regression/: evaluate.py  features.py  forecast.py  predict.py  train.py  validate.py
src/stellar_harvest_ie_ml_stellar/models/regression/config/: config.yml  core.py
src/stellar_harvest_ie_ml_stellar/pipelines/: classification_pipeline.py  regression_pipeline.py
src/stellar_harvest_ie_ml_stellar/schedulers/: classification_pipeline_scheduler.py  regression_pipeline_scheduler.py
src/stellar_harvest_ie_ml_stellar/utils/: model_version.py
tests/models/classification/: test_features.py  test_train.py
tests/models/classification/config/: test_core.py
tests/models/regression/: test_features.py
tests/pipelines/: test_classification_pipeline.py  test_regression_pipeline.py
