[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stellar-harvest-ie-ml-stellar"
version = "0.1.1"
description = "Machine learning training and inference pipeline for StellarHarvest"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["machine-learning", "mlops", "pipeline", "sklearn", "pydantic"]
authors = [
  { name = "Machine Learning Maverick", email = "github@machinelearningmaverick.com" },
]
dependencies = [
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "pydantic>=2.11.0",
  "pyyaml>=6.0",
  "schedule>=1.2.0",
  "stellar-harvest-ie-config>=0.1.2",
  "stellar-harvest-ie-models>=0.3.1",
  "stellar-harvest-ie-store>=0.1.2",
]

[project.scripts]
sh-classification-pipeline-scheduler = "stellar_harvest_ie_ml_stellar.schedulers.classification_pipeline_scheduler:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["stellar_harvest_ie_ml_stellar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s -q --disable-warnings --strict-markers"
log_cli = true
log_cli_level = "DEBUG"

[project.optional-dependencies]
dev = [
  "pytest>=7.2.0",
  "pytest-asyncio>=0.20.0",
  "mypy>=0.971",
  "flake8>=4.0.1",
  "ruff>=0.1.0",
]
